log file and application - dev.properties file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 #          DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/kun_uz
+spring.datasource.url=jdbc:postgresql://localhost:5432/youtube
 spring.datasource.username=jdbc_test
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
