--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 # ===============================
-#          DATABASE
+#       GENERAL
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/kun_uz
-spring.datasource.username=jdbc_test
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-server.url=http://localhost:8080
-server.port=8080
+spring.profiles.active=dev
+logging.level.root=INFO
+logging.level.com.example=DEBUG
+logging.pattern.console=%date{dd MMM yyyy;HH:mm:ss.SSS} %highlight(%-5level) %cyan(%logger{36}) - %green(%msg%n)
+logging.file.name=logs/log-file.log
+logging.pattern.file=%date{dd MMM yyyy - HH:mm:ss.SSS} %-5level %logger{36} - %msg%n
+logging.logback.rollingpolicy.max-file-size=1MB
+logging.logback.rollingpolicy.file-name-pattern=logs/old-log-%d{yyyy-MM-dd}.%i.log
 
