--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 logs/
-application-dev.properties
+/src/main/resources/talablar.txt/
+/src/main/resources/application-dev.properties/
+
+
