--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 #          DATABASE
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/youtube
-spring.datasource.username=youtube_user
+spring.datasource.username=jdbc_test
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
