Playlist Video api update and delete is metod added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# ===============================
+ # ===============================
 #       GENERAL
 # ===============================
 spring.profiles.active=dev
@@ -20,8 +20,8 @@ spring.flyway.enabled=false
 ######################
 spring.mail.host=smtp.mail.ru
 spring.mail.port=465
-spring.mail.username=aslbek.norqulov@mail.ru
-spring.mail.password=SbRUiU8wCksLX9S8nJgA
+spring.mail.username=rajabbek.ollanazarov@mail.ru
+spring.mail.password=fhJMwfW15gZ6hVk6rMBp
 spring.mail.protocol=smtps
 
 spring.mail.properties.mail.smtp.auth=true
