Subscription api get user Subscription method added

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/youtube
 spring.datasource.username=jdbc_user
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 server.url=http://localhost:8080
 server.port=8080
